--- a/View/MenuPage.xaml
+++ b/View/MenuPage.xaml
@@ -1,48 +1,49 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:maps="clr-namespace:Microsoft.Maui.Controls.Maps;assembly=Microsoft.Maui.Controls.Maps"
              x:Class="ProyectoFinal.View.MenuPage"
              Title="MenuPage">
-    <VerticalStackLayout>
 
-        <Grid>
-            <!-- Sidebar Navigation (using ListView) -->
-            <ListView x:Name="MenuListView"
-                  BackgroundColor="Blue"
-                  Header="Menú"
-                  IsPullToRefreshEnabled="False"
+    <Grid BackgroundColor="#f0f0f0">
+        <!-- Sidebar Navigation (using ListView) -->
+        <ListView x:Name="MenuListView"
+                  BackgroundColor="#FFFFFF"
                   SeparatorVisibility="None"
                   SelectionMode="Single"
-                  ItemSelected="MenuListView_ItemSelected">
-                <ListView.ItemsSource>
-                    <x:Array  Type="{x:Type x:String}">
-                        <x:String>Inicio</x:String>
-                        <x:String>Negocios</x:String>
-                        <x:String>Perfil</x:String>
-                        <!-- Agrega más opciones según tus necesidades -->
-                    </x:Array>
-                </ListView.ItemsSource>
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
-                            <StackLayout Padding="10">
-                                <Label Text="{Binding .}" />
-                            </StackLayout>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
+                  ItemSelected="MenuListView_ItemSelected_1">
+            <ListView.ItemsSource>
+                <x:Array Type="{x:Type x:String}">
+                    <x:String>Inicio</x:String>
+                    <x:String>Negocios</x:String>
+                    <x:String>Perfil</x:String>
+                    <!-- Agrega más opciones según tus necesidades -->
+                </x:Array>
+            </ListView.ItemsSource>
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextCell Text="{Binding}" TextColor="Black" />
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
 
-            <!-- Contenido principal -->
-            <StackLayout Grid.Column="1">
-                <Label Text="Contenido principal"
-                   FontSize="Large"
-                   HorizontalOptions="CenterAndExpand"
-                   VerticalOptions="CenterAndExpand" />
-            </StackLayout>
-        </Grid>
+        <!-- Content Area -->
+        <StackLayout Padding="15"
+                     VerticalOptions="CenterAndExpand"
+                     HorizontalOptions="CenterAndExpand">
+            <!-- Entry para la ubicación actual -->
+            <Entry x:Name="LocationEntry"
+                   Placeholder="Ingrese su ubicación actual"
+                   HorizontalOptions="FillAndExpand"
+                   VerticalOptions="Start"
+                   Margin="10" />
 
-
-
-    </VerticalStackLayout>
+            <!-- Map para mostrar el mapa -->
+            <maps:Map x:Name="MyMapView"
+                 WidthRequest="300"
+                 HeightRequest="300"
+                 VerticalOptions="FillAndExpand"
+                 HorizontalOptions="FillAndExpand" />
+        </StackLayout>
+    </Grid>
 </ContentPage>
