--- a/View/MainPage.xaml
+++ b/View/MainPage.xaml
@@ -3,7 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ProyectoFinal.View.MainPage"
              Title="MainPage">
-    <VerticalStackLayout>
+    <VerticalStackLayout
+        Spacing="20"
+        Padding="20">
         <Label 
             Text="Welcome to .NET MAUI!"
             VerticalOptions="Center" 
