--- a/View/RegisterPage.xaml
+++ b/View/RegisterPage.xaml
@@ -2,11 +2,93 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ProyectoFinal.View.RegisterPage"
-             Title="RegisterPage">
-    <StackLayout Padding="20">
-        <Entry x:Name="UsernameEntry" Placeholder="Username" />
-        <Entry x:Name="EmailEntry" Placeholder="Email" />
-        <Entry x:Name="PasswordEntry" Placeholder="Password" IsPassword="True" />
-        <Button Text="Register" Clicked="Button_Clicked" />
-    </StackLayout>
+             Title="Registrar">
+    <VerticalStackLayout
+        Spacing="20"
+        Padding="20">
+
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+
+            <Label 
+                Text="Registrarse"
+                VerticalOptions="Center" 
+                HorizontalOptions="Center"  
+                FontSize="25"
+                FontAttributes="Bold" 
+                Grid.Row="0"
+                Grid.Column="0"/>
+
+            <Image Source="logo.png" WidthRequest="100" 
+                Grid.Row="0"
+                Grid.Column="1"/>
+        </Grid>
+
+        <Grid RowSpacing="15">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="7*"/>
+            </Grid.ColumnDefinitions>
+
+            <Label Text="Usuario"
+                   HorizontalOptions="Start"
+                   VerticalOptions="Center"
+                   FontSize="18"
+                   Grid.Row="0"
+                   Grid.Column="0"/>
+
+            <Entry x:Name="UsernameEntry"
+                   Placeholder="Ingrese usuario"
+                   FontSize="15"
+                   Grid.Row="0"
+                   Grid.Column="1" />
+
+            <Label Text="Correo electrónico"
+                   HorizontalOptions="Start"
+                   VerticalOptions="Center"
+                   FontSize="18"
+                   Grid.Row="1"
+                   Grid.Column="0"/>
+
+            <Entry x:Name="EmailEntry"
+                   Placeholder="Ingrese correo electrónico"
+                   FontSize="15"
+                   Grid.Row="1"
+                   Grid.Column="1" />
+
+            <Label Text="Contraseña"
+                   HorizontalOptions="Start"
+                   VerticalOptions="Center"
+                   FontSize="18"
+                   Grid.Row="2"
+                   Grid.Column="0"/>
+
+            <Entry x:Name="PasswordEntry"
+                   Placeholder="Ingrese Contraseña"
+                   IsPassword="True" 
+                   FontSize="15"
+                   Grid.Row="2"
+                   Grid.Column="1" />
+
+        </Grid>
+
+
+        <Button Text="Registar" 
+                Clicked="Button_Clicked" 
+                BackgroundColor="Tomato"
+                HeightRequest="50"
+                WidthRequest="150"/>
+
+    </VerticalStackLayout>
 </ContentPage>
